# Cat-HQ

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/: __init__.py  auth.py  broadcast.py  config.py  db.py  main.py  models.py  notify.py  pollers.py
backend/app/adapters/: __init__.py  base.py  litterrobot.py
backend/app/adapters/govee/: __init__.py  adapter.py  client.py
backend/app/adapters/petlibro/: __init__.py  adapter.py  client.py
backend/app/api/: __init__.py  care.py  devices.py  events.py  notify.py  ws.py
backend/tests/: conftest.py  test_api_care.py  test_api_devices.py  test_api_events.py  test_api_plug.py  test_auth.py  test_govee_adapter.py  test_govee_client.py  test_litterrobot_adapter.py  test_notify.py  test_petlibro_adapter.py  test_recorder.py  test_static_spa.py  test_ws.py
docs/: 00-PROJECT-BRIEF.md  01-ARCHITECTURE.md  02-INTEGRATIONS.md  03-ROADMAP.md  04-TESTING.md  05-PLUG-AND-UX-SPEC.md  06-DASHBOARD-SPEC.md
frontend/: index.html  package-lock.json  package.json  tsconfig.build.json  tsconfig.json  vite.config.ts  vitest.config.ts
frontend/public/fonts/: LICENSE.txt
frontend/src/: App.test.tsx  App.tsx  api.test.ts  api.ts  format.test.ts  format.ts  insights.test.ts  insights.ts  main.tsx  styles.css  test-setup.ts  types.ts  useInsights.ts  useLive.test.tsx  useLive.ts
frontend/src/components/: Bar.tsx  Care.test.tsx  Care.tsx  ChutkuAvatar.tsx  ChutkuCat.test.tsx  ChutkuCat.tsx  ConfirmButton.test.tsx  ConfirmButton.tsx  Den.test.tsx  Den.tsx  FeederCard.test.tsx  FeederCard.tsx  Gauge.tsx  GoalRing.test.tsx  GoalRing.tsx  HealthBadge.tsx  HistoryView.test.tsx  HistoryView.tsx  HoldButton.test.tsx  HoldButton.tsx  LitterCard.test.tsx  LitterCard.tsx  Login.tsx  MoodCard.test.tsx  MoodCard.tsx  PinsuAvatar.tsx  PixelCat.test.tsx  PixelCat.tsx  PowerZone.test.tsx  PowerZone.tsx  Ring.tsx  Sparkline.test.tsx  Sparkline.tsx  TickNumber.tsx  Tube.tsx
go2rtc/: go2rtc.yaml
scripts/: gen_icons.py  m5-review.workflow.js  smoke.cjs  verify_m5.sh
scripts/githooks/: pre-commit
