[project]
name = "cathq-backend"
version = "0.1.0"
description = "Cat HQ backend — FastAPI + adapters for cat devices"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.30,<1",
    "pydantic-settings>=2.4,<3",
    # Exact-pinned: reverse-engineered API, breakage arrives via releases.
    # Floor is 2025.3.2 (older 2025.x have 403/404 regressions). Pulls aiohttp.
    "pylitterbot==2025.6.1",
    # Direct dep for the ported Petlibro client (adapters/petlibro/, M2).
    "aiohttp>=3.9,<4",
]

# Arriving in later milestones (keep Dockerfile dep layer in sync):
#   M3: sqlalchemy, aiosqlite
#   M8: pywebpush

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
