[project]
name = "cathq-backend"
version = "0.1.0"
description = "Cat HQ backend — FastAPI + adapters for cat devices"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.30,<1",
    "pydantic-settings>=2.4,<3",
    # Exact-pinned: reverse-engineered API, breakage arrives via releases.
    # Floor is 2025.3.2 (older 2025.x have 403/404 regressions). Pulls aiohttp.
    "pylitterbot==2025.6.1",
    # Direct dep for the ported Petlibro client (adapters/petlibro/, M2).
    "aiohttp>=3.9,<4",
    # Data layer (M3).
    "sqlalchemy>=2.0,<3",
    "aiosqlite>=0.20",
    # Imported directly (api/devices.py, adapters/litterrobot.py) for Cognito
    # error mapping; already present transitively via pylitterbot→pycognito→
    # boto3, so declaring it changes no installed set and the Dockerfile
    # dep layer stays as-is.
    "botocore>=1.34",
]

# Arriving in later milestones (keep Dockerfile dep layer in sync):
#   M8: pywebpush

# Test-only deps — NOT in the Dockerfile's dependency layer (docs/04 rule 3:
# test deps stay out of the runtime image). Install: pip install -e '.[test]'
[project.optional-dependencies]
test = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    # SQLAlchemy async needs greenlet; its platform marker installs it on
    # linux (the container) but skips macOS arm64 (this dev box).
    "greenlet>=3",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
